<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPIRIT</string>
    <string name="scanning">Scanning...</string>
    <string name="menu_standard">Standard</string>
    <string name="menu_metric">Metric</string>
    <string name="title_activity_swipe_view_">SwipeView_Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_">StorytellAR</string>
    <string name="title_activity_story_list_installed__fragment">StoryListInstalled_Fragment</string>
    <string name="title_activity_story_list_store__fragment">StoryListStore_Fragment</string>
    <string name="title_activity_story_details_">StorytellAR</string>
    <string name="action_filter">Filter anwenden</string>
    <string name="action_restart">Neustart</string>
    <string name="action_start">Start</string>
    <string name="action_delete">Löschen</string>
    <string name="action_download">Herunterladen</string>
    <string name="filtern">Filtern</string>
    <string name="showAll">alle anzeigen</string>
    <string name="seekbarStartvalue">50</string>
    <string name="km">km</string>
    <string name="title_activity_filter">StorytellAR</string>
    
    
    <string name="action_installed_filter">Installierte Stories filtern</string>
    <string name="action_store_filter">Store Stories filtern</string>
    <string name="reset_filter">Filter zurücksetzen</string>
    
    <string name="filterFor">Filtern nach:</string>
    <string name="title">Titel</string>
    <string name="author">Autor</string>
    <string name="maxDataSize">Max Dateigröße (MB)</string>
    <string name="createdAfter">Erstellt nach</string>
    <string name="createdBefore">Erstellt vor</string>
     <string name="changeDate">Datum ändern</string>
    <string name="city">Stadt</string>
    <string name="radius">Einzugsradius 100 km</string>

    
    
    
    
    
    
    
    
    
    

</resources>
